--- a/index.html
+++ b/index.html
@@ -8,17 +8,23 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container mt-5">
         <div id="login">
             <form action="">
-            <div>
+            <div class="form-group">
                 <label for="user">Usuario</label>
-                <input type="text" id="user">
+                <input type="text" id="user" class="form-control">
             </div>
+            <div class="form-group">
                 <label for="pass">Contraseña</label>
-                <input type="password" id="pass">
-                <input type="submit" value="ingresar">
+                <input type="password" id="pass" class="form-control">
+            </div>    
+                <input type="submit" value="ingresar" class="btn btn-success btn-block">
             </form>
+            <div id="Link" class="mt-2">
+            <a href="./registro.html">Ir a registro</a>
         </div>
+      </div>
+    </div>
 </body>
 </html>
