--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Logi</title>
+    <title>Login</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
     <div class="container mt-5">
         <div id="login">
-            <form action="">
+            <form id="formLogin">
             <div class="form-group">
                 <label for="user">Usuario</label>
                 <input type="text" id="user" class="form-control">
@@ -19,12 +19,13 @@
                 <label for="pass">Contraseña</label>
                 <input type="password" id="pass" class="form-control">
             </div>    
-                <input type="submit" value="ingresar" class="btn btn-success btn-block">
+                <input type="submit" value="Ingresar" class="btn btn-success btn-block">
             </form>
             <div id="Link" class="mt-2">
             <a href="./registro.html">Ir a registro</a>
         </div>
       </div>
     </div>
+    <script src="js/index.js"></script>
 </body>
 </html>
