--- a/inicio.html
+++ b/inicio.html
@@ -18,10 +18,20 @@
     </div>
     </div>
     <script>
+
+        window.addEventListener('load', function(){
+            if(localStorage.getItem('sesion') == null){
+                window.location.replace('./index.html', '_self');
+
+            }
+        })
         const boton = document.getElementById('btnSalir');
 
         boton.addEventListener('click', function(e){
             e.preventDefault();
+            localStorage.removeItem('sesion');
+            window.open('./index.html', '_self');
+
             
         });
     </script>
