--- a/registro.html
+++ b/registro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro</title>
+    <title>Login</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/estilos.css">
 </head>
@@ -36,6 +36,7 @@
         </div>
       </div>
     </div>
+    <script src="js/utilidades.js"></script>
     <script src="js/registro.js"></script>
 </body>
 </html>
